style.css
*{
    margin: 0%;
    padding: 0%;
}
body{
    background-color: #000;
}
/* header{
    background-color: #000;
} */


.navbar .navbar-nav .nav-item a{
color: #fff;
}
form input{
 width: 100%;
 margin-bottom: 4%;
 padding-top: 5px;
}
.search-bar input{
    background-color: rgba(81, 88, 104, 1);
    border: none;
    height: 50%;
}
.navbar-btn .Sign-up{
    border: 0.599px solid #9E9C9C;
    border-radius: 7.183px;
    color: #fff;
}

.nav-btn .btn{
     color: #F8F7F7;
     border-radius: 7.183px;
     border: 0.599px solid #9E9C9C;
}

.sidebarMenu{
    height: 100%;
    position: fixed;
    right: 0;
    top: 0;
    width: 270px;
    margin-top: 0px;
    background-color: #111111;
    transform: translateX(270px);
    transition: transform 250ms ease-in-out;
    /* overflow-y: scroll; */
    
  }
  #openSidebarMenu:checked ~ .sidebarMenu{
    transform: translateX(0px);
  }
  .sidebarIconToggle{
    width: 22px;
    height: 22px;
    z-index: 99999;
    cursor: pointer;
    padding-top: 3px;
    padding-left: 3px;
    
  }
  .spinner{
    height: 2px;
    width: 30px;
    background: #fff;
    transition: all 0.3s; 
  }

  .spinner.middle,.spinner.bottom{
    margin-top: 3px;
    
  }
  /* #openSidebarMenu:checked ~ .sidebarIconToggle > .spinner.middle{
    opacity: 0;
  }
  #openSidebarMenu:checked ~ .sidebarIconToggle > .spinner.top{
    transform: rotate(135deg);
    margin-top: 8px;
  }
  #openSidebarMenu:checked ~ .sidebarIconToggle > .spinner.bottom{
    transform: rotate(-135deg);
    margin-top: -9px
  } */
@media screen and (max-width: 1042px) {
    nav {
      display: none;
    }
  }
  @media screen and (min-width: 1042px) {
    .sidebarMenu{
      display: none;
    }
    .sidebarIconToggle{
        display: none;
    }
    .sidebar img{
        display: none;
    }
    
  }
.sidebarMenu .search-bar input{
    margin-top: 10%;
}
/* header */
.sidebar{
    overflow-x: hidden;
}

header h1{
    font-size: 60px;
    font-weight: 400;
    background: var(--doml-gradient-1, linear-gradient(219deg, #00F0FF 0%, #5200FF 48.25%, #FF2DF7 100%));
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-family: Al Nile;
}
header h2{
    color: #fff;
    font-size: 55px;
    font-weight: 400;
}
header p{
    margin-top: 15%;
    color: #fff;
    font-size: 25px;
}
.underline{
    background: linear-gradient(219deg, #00F0FF 0%, #5200FF 48.25%, #FF2DF7 100%);
    width: 100%;
    height: 1px;
    margin-bottom: 15%;
}
.header-content .header-btn button{
    background-color: transparent;
    border-radius: 23px;
    border: 1px solid #5200FF ;

    /* border-color:  linear-gradient(219deg, #00F0FF 0%, #5200FF 48.25%, #FF2DF7 100%); */
}

@media screen and (max-width: 992px) {
    .header-content{
        text-align: center;
    }
    .header-image{
        display: flex;
        justify-content: center;
    }
    .header-content .header-btn button{
        margin-bottom: 5%;
    }
  }

/* section-1 */
/* .section-1{
    background-color: #000;
} */
.section-1 .container{
        display: flex;
        flex-wrap: wrap;
}

.logo {
    width: calc(100% / 7 - 10px); /* Adjust this value for spacing */
    height: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .section-1 p{
    color: #fff;
    font-size: 20px;
    font-weight: 400;
    margin-top: 2%;
  }
  .section-1 .logo,.section-8 .logo{
    width: 100%;
    height: 100%;
  }
  
  @media screen and (max-width: 992px) {
    .section-1 p{
        text-align: center;
      }
    #image-container2,#image-container3{
        display: none;
    }
}
@media screen and (min-width: 992px) {
#view-more{
    display: none;
  }
.view-more-2{
    display: none;
}
.section-1 p{
    text-align: center;
}

}
.section-1 button{
    border: 1px solid #5200FF;
    padding: 10px;
}
  /* section-2 */
  
  .section-2 h1{
    font-size: 40px;
    font-weight: 400;
    background: var(--doml-gradient-1, linear-gradient(219deg, #00F0FF 0%, #5200FF 48.25%, #FF2DF7 100%));
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-family: Al Nile;
}
.section-2 h2{
    color: #fff;
    font-size: 40px;
    font-weight: 400;
}
.section-2 p{
    margin-top: 5%;
    color: #fff;
    font-size: 20px;
    line-height: 196.9%
}
.learn-more-btn button{
    background-color: transparent;
    border-radius: 23px;
    border: 1px solid #5200FF ;
    /* border-color:  linear-gradient(219deg, #00F0FF 0%, #5200FF 48.25%, #FF2DF7 100%); */
}
@media screen and (max-width: 992px) {
    .section-2-content{
        text-align: center;
    }
    .square-image{
        display: flex;
        justify-content: center;
    }
  }
/* 
section-3 */
.section-3 h1{
    font-size: 40px;
    font-weight: 400;
    background: var(--doml-gradient-1, linear-gradient(219deg, #00F0FF 0%, #5200FF 48.25%, #FF2DF7 100%));
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-family: Al Nile;
}
.section-3 h2{
    color: #fff;
    font-size: 40px;
    font-weight: 400;
}
.section-3 p{
    margin-top: 5%;
    color: #fff;
    font-size: 20px;
    line-height: 196.9%
}
@media screen and (max-width: 992px) {
    .section-3-content{
        text-align: center;
    }
    .rectangular-image{
        display: flex;
        justify-content: center;
    }
    .section-3-content{
        margin-left: 0% !important;
        margin-bottom: 10%;
    }
  }

  /* section-4 */
  .section-4{
    padding-top: 5%;
    padding-bottom: 10%;
    border-radius: 20px;
    background: var(--doml-gradient-1, linear-gradient(219deg, #00F0FF 0%, #5200FF 48.25%, #FF2DF7 100%));
  }
  .section-4-content p{
   font-size: 20px;
   font-family: Montserrat;
    font-size: 20px;
    font-style: normal;
    font-weight: 600;
    line-height: 196.9%;
  }
  
  .section-4-content h1{
    font-size: 24px;
    font-weight: 700;
    font-family: Al Nile;
  }
  .section-4-content h2{
    font-size: 20px;
    font-weight: 500;
    font-family: Al Nile;
  }
  .man-image,.lady2-image{
    margin-bottom: 20%;
  }
  .man-image img,.lady2-image img{
    border-radius: 40px;
  }
.circle-icons i{
    font-size: 13px;
}
@media screen and (max-width: 992px) {
    .circle-icons {
        margin-top: 10%;
    }
    .section-4 .lady-image,.lady2-image,.man-image{
        display: flex;
        justify-content: center;
      
    }
     .section-4 {
       margin-left: 2%;
    }
    .section-4-content{
        text-align: center;
    }
    .w-full h1{
        text-align: center !important;
    }
}
@media screen and (min-width: 992px) {
    .w-full {
        display: flex;
        
    }
    .section-4-content,.discord-img{
        margin-left: -15%;
      }
}

/* section-5 */
.section-5 h1{
    font-size: 40px;
    font-weight: 400;
    background: var(--doml-gradient-1, linear-gradient(219deg, #00F0FF 0%, #5200FF 48.25%, #FF2DF7 100%));
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-family: Al Nile;
}
.section-5 h2{
    color: #fff;
    font-size: 40px;
    font-weight: 400;
}
.section-5 p{
    margin-top: 5%;
    color: #fff;
    font-size: 20px;
    line-height: 196.9%
}
.learn-more-btn button{
    background-color: transparent;
    border-radius: 23px;
    border: 1px solid #5200FF ;
    /* border-color:  linear-gradient(219deg, #00F0FF 0%, #5200FF 48.25%, #FF2DF7 100%); */
}
@media screen and (max-width: 992px) {
    .section-5-content{
        text-align: center;
    }
    .square-image{
        display: flex;
        justify-content: center;
    }
   
  }
  /* section-5 */
.section-6 h1{
    font-size: 40px;
    font-weight: 400;
    background: var(--doml-gradient-1, linear-gradient(219deg, #00F0FF 0%, #5200FF 48.25%, #FF2DF7 100%));
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-family: Al Nile;
}
.section-6 h2{
    color: #fff;
    font-size: 40px;
    font-weight: 400;
}
.section-6 p{
    margin-top: 5%;
    color: #fff;
    font-size: 20px;
    line-height: 196.9%
}
.learn-more-btn button{
    background-color: transparent;
    border-radius: 23px;
    border: 1px solid #5200FF ;
    /* border-color:  linear-gradient(219deg, #00F0FF 0%, #5200FF 48.25%, #FF2DF7 100%); */
}
@media screen and (max-width: 992px) {
    .section-6-content{
        text-align: center;
    }
    .square-image{
        display: flex;
        justify-content: center;
    }
  }
  /* section-7 */
  .section-7{
    border-radius: 20px;
    background: var(--doml-gradient-1, linear-gradient(219deg, #00F0FF 0%, #5200FF 48.25%, #FF2DF7 100%));
  }
  .section-7-content h1{
    font-size: 50px;
}
.email-input input{
    width: 70%;
    border-radius: 30px;
    background: rgba(255, 255, 255, 0.20);
    border: none;
    
}
.email-input input::placeholder{
    padding-left: 30px;
    color: #fff;
    font-size: 20px;
    font-family: Montserrat;
}
.email-input button {
    border-radius: 30px;
    background-color: #000;
    font-family: Montserrat;
}
/* @media screen and (max-width: 992px) {
    .email-input inp {
       margin-left: 10% !important;
}
} */
@media screen and (max-width: 992px) {
    .email-input button {
      width: 100%;
      margin-top: 2%;
      margin-bottom: 5%;
     
    }
    .section-7-content h1{
        font-size: 35px;
        padding-top: 0%;
    }
    .email-input input{
        width: 100% !important;
    
    }
    .section-7-content{
        margin-top: 0% !important;
        text-align: center;
    }
    .section-6-content{
        margin-left: 0% !important;
    }
    #image-container5{
        display: none;
    }
  }
.email-input button i{
    color: var(--doml-gradient-1, linear-gradient(219deg, #00F0FF 0%, #5200FF 48.25%, #FF2DF7 100%));
}
.gradient-icon {
    display: inline-block;
    background-image: linear-gradient(219deg, #00F0FF 0%, #5200FF 48.25%, #FF2DF7 100%);
    -webkit-background-clip: text;
    background-clip: text;
    color: transparent;
  }
/* footer */
.footer-underline{
    background: linear-gradient(219deg, #00F0FF 0%, #5200FF 48.25%, #FF2DF7 100%);
    width: 100%;
    height: 1px;
}
footer h1{
    font-family: Montserrat;
    font-size: 22px;
    color: #fff;
}
@media screen and (max-width: 767px) {
    footer h1{
        color: #fff;
        font-family: Montserrat;
        font-size: 18px;
    }
    
}
@media screen and (max-width: 502px) {
    footer h1{
        color: #fff;
        font-family: Montserrat;
        font-size: 12px;
    }
    
}

